--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "~1.13.2",
     "debug": "~2.2.0",
     "express": "~4.13.1",
-    "morgan": "~1.6.1"
+    "morgan": "~1.6.1",
+    "request": "^2.69.0"
   }
 }
